apps/servarr/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: servarr
  labels:
    routed-gateway: "true"
