apps/servarr/templates/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-restricted
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: database
        podSelector:
          matchLabels:
            cnpg.io/cluster: database-cluster
      ports:
        - protocol: TCP
          port: 5432
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: vpn-gateway
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: servarr
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-jelly-egress
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values: ["jellyfin", "jellyseerr"]
  egress:
    - {}
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-volsync-jobs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/created-by: "volsync"
  egress:
    - {}
  policyTypes:
    - Egress
